Latest build deployed.

--- a/notes/Git.html
+++ b/notes/Git.html
@@ -166,8 +166,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="build-types.html" class="internal"><span class="title">Building the Components of Your Course</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="build-types.html#syllabus-structure" class="internal"><span class="title">Course Syllabus</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="build-types.html#activities-builds" class="internal"><span class="title">Activities</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="build-types.html#notes-builds" class="internal"><span class="title">Course Notes</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="build-types.html#activities-notes-builds" class="internal"><span class="title">Activities and Notes</span></a></div></li>
 </ul>
 </li>
 </ul></nav></div>
