--- a/syllabus/syllabus.html
+++ b/syllabus/syllabus.html
@@ -155,10 +155,7 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="#grading" class="internal"><span class="title">Course Requirements and Grading</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="#course-expectations" class="internal"><span class="title">Course Expectations</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="#campus-policies" class="internal"><span class="title">Campus Policies</span></a></div></li>
-<li class="toc-item toc-section">
-<div class="toc-title-box"><a href="#schedule" class="internal"><span class="title">Course Schedule</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="#schedule-2" class="internal"><span class="title">Week 1</span></a></div></li></ul>
-</li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="#schedule" class="internal"><span class="title">Course Schedule</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="article" id="syllabus"><section class="frontmatter" id="frontmatter"><h2 class="heading">
 <span class="title">Course Title Syllabus</span><span class="subtitle">Math XXX - Spring/Summer/Fall 20XX</span>
@@ -683,9 +680,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="autopermalink" data-description="Paragraphs: Course Withdrawal Policy"><a href="#campus-policies-5" title="Copy heading and permalink for Paragraphs: Course Withdrawal Policy" aria-label="Copy heading and permalink for Paragraphs: Course Withdrawal Policy">🔗</a></div></section><div class="autopermalink" data-description="Section: Campus Policies"><a href="#campus-policies" title="Copy heading and permalink for Section: Campus Policies" aria-label="Copy heading and permalink for Section: Campus Policies">🔗</a></div></section><section class="section" id="schedule"><h2 class="heading hide-type">
 <span class="type">Section</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">Course Schedule</span>
 </h2>
-<section class="subsection" id="schedule-2"><h3 class="heading hide-type">
-<span class="type">Subsection</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">Week 1</span>
-</h3>
+<section class="paragraphs" id="schedule-2"><h3 class="heading"><span class="title">Week 1.</span></h3>
 <div class="para" id="schedule-2-2">
 <div class="tabular-box natural-width"><table class="tabular">
 <tr>
@@ -707,7 +702,7 @@ eBookConfig.enable_chatcodes =  false;
 </table></div>
 <div class="autopermalink" data-description="Paragraph"><a href="#schedule-2-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
-<div class="autopermalink" data-description="Subsection: Week 1"><a href="#schedule-2" title="Copy heading and permalink for Subsection: Week 1" aria-label="Copy heading and permalink for Subsection: Week 1">🔗</a></div></section><section class="paragraphs" id="schedule-3"><h3 class="heading"><span class="title">Week 2.</span></h3>
+<div class="autopermalink" data-description="Paragraphs: Week 1"><a href="#schedule-2" title="Copy heading and permalink for Paragraphs: Week 1" aria-label="Copy heading and permalink for Paragraphs: Week 1">🔗</a></div></section><section class="paragraphs" id="schedule-3"><h3 class="heading"><span class="title">Week 2.</span></h3>
 <div class="para" id="schedule-3-2">
 <div class="tabular-box natural-width"><table class="tabular">
 <tr>
